--- a/requirements.txt
+++ b/requirements.txt
@@ -1,298 +1,13 @@
-aesara==2.9.4
-aiobotocore==2.15.2
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.10
-aioitertools==0.12.0
-aiosignal==1.3.2
-alabaster==1.0.0
-alembic==1.14.0
-altair==5.5.0
-anaconda-cli-base==0.4.1
-aniso8601==9.0.1
-annotated-types==0.7.0
-anyio==4.7.0
-appdirs==1.4.4
-archspec==0.2.5
-argon2-cffi==23.1.0
-arrow==1.3.0
-astroid==3.3.6
-astropy==7.0.0
-astropy-iers-data==0.2024.12.9.0.36.21
-asttokens==3.0.0
-async-lru==1.0.0
-asyncssh==2.19.0
-atomicwrites==1.4.1
-attrs==24.2.0
-Automat==24.8.1
-autopep8==2.3.1
-babel==2.16.0
-bcrypt==4.2.1
-beautifulsoup4==4.12.2
-bidict==0.23.1
-black==24.10.0
-bleach==6.2.0
-blinker==1.9.0
-bokeh==3.6.2
-boltons==24.1.0
-boto3==1.35.82
-botocore==1.35.36
-Bottleneck==1.4.2
-Brotli==1.1.0
-cachelib==0.13.0
-cachetools==5.5.0
-certifi==2024.12.14
-cffi==1.15.1
-chardet==5.2.0
-charset-normalizer==3.4.0
-click==8.0.4
-cloudpickle==3.1.0
-colorama==0.4.6
-colorcet==3.0.0
-comm==0.2.2
-conda==23.3.1
-conda-build==3.23.4
-conda-package-handling==2.4.0
-conda-repo-cli==1.1.0
-conda-token==0.5.0
-cryptography==44.0.0
-cssselect==1.1.0
-cycler==0.12.1
-cytoolz==1.0.1
-dance==0.0.1
-dask==2024.12.0
-dask-expr==1.1.20
-datashader==0.12.0
-debugpy==1.8.11
-decorator==5.0.9
-defusedxml==0.7.1
-Deprecated==1.2.15
-deprecation==2.1.0
-diff-match-patch==20241021
-dill==0.3.9
-distributed==2024.12.0
-dnspython==2.7.0
-docstring-to-markdown==0.15
-docutils==0.21.2
-dynaconf==3.2.6
-et_xmlfile==2.0.0
-etuples==0.3.9
-evidently==0.5.1
-executing==2.1.0
-Faker==33.1.0
-fastapi==0.115.6
-fastjsonschema==2.21.1
-filelock==3.16.1
-flake8==7.1.1
 Flask==2.2.5
-Flask-Compress==1.17
-Flask-Cors==5.0.0
 Flask-Dance==7.1.0
-Flask-Images==3.0.2
-Flask-JWT-Extended==4.7.1
-Flask-Login==0.6.3
-Flask-Mail==0.10.0
-Flask-Migrate==4.0.7
-Flask-OAuthlib==0.9.6
-Flask-RESTful==0.3.10
-Flask-SocketIO==5.4.1
-Flask-SQLAlchemy==3.1.1
-flask-talisman==1.1.0
-Flask-Testing==0.8.1
-Flask-Uploads==0.2.1
-Flask-WTF==1.2.2
-fonttools==4.55.3
-fqdn==1.5.1
-from-root==1.3.0
-frozendict==2.4.6
-frozenlist==1.5.0
-fsspec==2024.10.0
-gensim==4.0.1
-gitdb==4.0.11
-GitPython==3.1.29
-greenlet==3.1.1
-gunicorn==23.0.0
-h11==0.14.0
-h5py==3.12.1
-holoviews==1.20.0
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.28.1
-hvplot==0.11.1
-idna==3.10
-imagecodecs==2024.9.22
-imageio==2.36.1
-imagesize==1.3.0
-imbalanced-learn==0.12.4
-importlib_metadata==8.5.0
-incremental==24.7.2
-inflection==0.5.1
-iniconfig==2.0.0
-ipykernel==6.29.5
-ipython==8.30.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-isort==5.12.0
-itemadapter==0.10.0
-itemloaders==1.3.2
-iterative-telemetry==0.0.9
-itsdangerous==2.1.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jedi==0.19.2
-jellyfish==1.1.3
-Jinja2==3.0.2
-jmespath==1.0.0
+Flask-Dance-Google==7.1.0
+Flask-Dance-Github==7.1.0
+Flask-Session==0.4.0
+flask-cors==5.0.0
+Flask-Werkzeug==2.3.4
 joblib==1.3.2
-json5==0.10.0
-jsonpatch==2.0.0
-jsonpointer==3.0.0
-jsonschema==4.6.0
-jsonschema-specifications==2024.10.1
-jupyter==1.1.1
-jupyter-console==6.4.0
-jupyter-events==1.0.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.2.0
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.15.0
-jupyterlab_widgets==3.0.13
-keyring==25.5.0
-kiwisolver==1.4.7
-lazy-object-proxy==1.9.0
-lazy_loader==0.3.1
-lckr_jupyterlab_variableinspector==3.2.4
-libarchive-c==3.4.2
-libmambapy==1.0.0
-linkify-it-py==2.0.3
-litestar==2.13.0
-litestar-htmx==0.4.1
-llvmlite==0.39.1
-lmdb==1.5.1
-locket==1.0.0
-logical-unification==0.4.6
-lxml==5.3.0
-lz4==4.3.3
-Mako==1.3.8
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
-mccabe==0.7.0
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-menuinst==1.4.0
-miniKanren==1.0.3
-mistune==3.0.2
-mkl==2025.0.1
-mkl-service==2.4.2
-mkl_fft==1.3.11
-mkl_random==1.2.8
-more-itertools==10.5.0
-mpmath==1.2.1
-msgpack==1.1.0
-msgspec==0.18.6
-multidict==6.1.0
-multipledispatch==1.0.0
-mypy==1.13.0
-mypy-boto3-s3==1.35.81
-mypy-extensions==0.4.3
-narwhals==1.18.4
-navigator-updater==0.2.1
 numpy==1.25.2
-oauthlib==3.2.2
-opencensus==0.11.0
-opencensus-context==0.2.3
-opencodex==3.0.1
-optuna==3.1.0
-packaging==24.0
-pandas==2.1.0
-parso==0.8.3
-pathlib==1.0.2
-pathspec==0.9.2
-patsy==0.5.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.5.0
-pip==22.3.1
-pluggy==1.0.0
-pooch==1.8.0
-prefect==2.5.0
-preshed==4.0.1
-protobuf==5.4.0
-psutil==5.9.4
-ptyprocess==0.7.0
-py==1.11.0
-py4j==0.10.9
-py-cpuinfo==9.0.0
-py-spy==0.3.0
-pyaml==21.0.0
-pybind11==2.9.0
-pycocotools==2.0.0
-pycryptodome==3.17
-pydantic==2.8.2
-pydocstyle==7.8.0
-pyflakes==3.0.1
-PyJWT==2.7.1
-pylogs==0.9.0
-pylsp==1.10.1
-pyodbc==4.0.35
-pyopenssl==24.1.1
-pyparsing==3.0.9
-pyrsistent==0.19.0
-pytest==7.5.1
-pytest-cov==4.1.0
-pytest-xdist==3.3.1
-python-dateutil==2.8.2
-pytorch-lightning==2.5.0
-pytz==2024.5
-pyyaml==6.1.3
-redis==4.6.3
-requests==2.29.1
-requests-oauthlib==1.3.1
-resampy==0.4.0
-rich==13.2.1
-rsa==4.9
 scikit-learn==1.2.2
-scipy==1.11.0
-seaborn==0.12.2
-sentry-sdk==2.20.0
-sickle==2.0.5
-simplejson==3.20.1
-snowballstemmer==2.2.0
-sortedcontainers==2.4.0
-soupsieve==2.4.2
-SQLAlchemy==2.1.0
-sqlparse==0.5.4
-tabulate==0.8.10
-tbb==2024.0.1
-tenacity==8.3.0
-tensorboard==2.15.0
-tensorboardX==2.6.1
-tensorflow==2.15.0
-termcolor==2.3.0
-terminado==0.17.0
-testpath==0.6.0
-texttable==1.6.7
-toml==0.10.2
-torch==2.1.0
-tornado==6.3.2
-tox==4.8.0
-tqdm==4.66.0
-traitlets==5.9.0
-typing-extensions==4.7.1
-urllib3==1.26.16
-watchdog==3.0.0
-webcolors==1.12.1
-webencodings==0.5.1
-websocket-client==1.5.3
 Werkzeug==2.3.4
-whitenoise==6.4.1
-yarl==1.9.0
-zipp==3.17.0
+gunicorn==20.1.0
+python-dotenv==1.0.0  # To manage environment variables
